--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,24 @@
 body {
     background-image: url(../images/bicycles.png)
 }
+hr{
+    height: 5px;
+    background-color: #ffffff;
+    border: none;
+}
+.jumbotron {
+    background-image: url(https://scitechdaily.com/images/Molecules-Integrate-into-Crystal.jpg);
+}
+#randomnum {
+    background-color: orange;
+}
+#score {
+    background-color: palegreen;
+}
+
+.jumbotron h1{
+    color: white
+} 
+.jumbotron p{
+    color: white
+}
